@@ -55,7 +55,8 @@ schema = Schema((
             label_msgid='minaraad_label_body',
             i18n_domain='minaraad',
         ),
-        default_output_type='text/html'
+        default_content_type='text/html',
+        default_output_type='text/html',
     ),
 
     OrderableReferenceField(
